Allow uploading files as part of a Task

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.number_field :priority %>
   </div>
 
+  <div class="field">
+    <%= form.label :files %>
+    <%= form.file_field :files, multiple: true %>
+  </div>
+
     <%= form.hidden_field :project_id %>
 
   <div class="actions">
